...
    tools:ignore="MissingTranslation">

    <!-- Activitiy and fragment titles -->
    <string name="app_name" translate="false">AntennaPod</string>
    <string name="feeds_label">Feeds</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add Podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="all_episodes_short_label">All</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="new_label">New</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="downloads_running_label">Running</string>
    <string name="downloads_completed_label">Completed</string>
    <string name="downloads_log_label">Log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions List</string>
    <string name="cancel_download_label">Cancel\nDownload</string>
    <string name="playback_history_label">Playback History</string>
    <string name="gpodnet_main_label">gpodder.net</string>
...
    <string name="statistics_mode">Statistics mode</string>
    <string name="statistics_mode_normal">Calculate duration that was actually played. Playing twice is counted twice, while marking as played is not counted</string>
    <string name="statistics_mode_count_all">Sum up all podcasts marked as played</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>

    <!-- Main activity -->
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="drawer_preferences">Drawer Preferences</string>
    <string name="drawer_feed_order_unplayed_episodes">Sort by counter</string>
    <string name="drawer_feed_order_alphabetical">Sort alphabetically</string>
    <string name="drawer_feed_order_last_update">Sort by publication date</string>
    <string name="drawer_feed_order_most_played">Sort by number of played episodes</string>
...
    <string name="hide_has_media_label">Has media</string>
    <string name="filtered_label">Filtered</string>
    <string name="refresh_failed_msg">{fa-exclamation-circle} Last Refresh failed</string>
    <string name="open_podcast">Open Podcast</string>

    <!-- actions on feeditems -->
    <string name="download_label">Download</string>
    <string name="play_label">Play</string>
    <string name="pause_label">Pause</string>
    <string name="stop_label">Stop</string>
    <string name="stream_label">Stream</string>
    <string name="remove_label">Remove</string>
    <string name="delete_label">Delete</string>
...
    <string name="authentication_notification_title">Authentication required</string>
    <string name="authentication_notification_msg">The resource you requested requires a username and a password</string>
    <string name="confirm_mobile_download_dialog_title">Confirm Mobile Download</string>
    <string name="confirm_mobile_download_dialog_message_not_in_queue">Downloading over mobile data connection is disabled in the settings.\n\nYou can choose to either only add the episode to the queue or you can allow downloading temporarily.\n\n<small>Your choice will be remembered for 10 minutes.</small></string>
    <string name="confirm_mobile_download_dialog_message">Downloading over mobile data connection is disabled in the settings.\n\nDo you want to allow downloading temporarily?\n\n<small>Your choice will be remembered for 10 minutes.</small></string>
    <string name="confirm_mobile_download_dialog_only_add_to_queue">Enqueue</string>
    <string name="confirm_mobile_download_dialog_enable_temporarily">Allow temporarily</string>

    <!-- Mediaplayer messages -->
    <string name="player_error_msg">Error!</string>
    <string name="player_stopped_msg">No media playing</string>
    <string name="player_preparing_msg">Preparing</string>
    <string name="player_ready_msg">Ready</string>
...
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for Interruptions</string>
    <string name="pref_resumeAfterCall_sum">Resume playback after a phone call completes</string>
    <string name="pref_resumeAfterCall_title">Resume after Call</string>
    <string name="pref_restart_required">AntennaPod has to be restarted for this change to take effect.</string>

    <!-- Online feed view -->
    <string name="subscribe_label">Subscribe</string>
    <string name="subscribed_label">Subscribed</string>
    <string name="downloading_label">Downloading&#8230;</string>

    <!-- Content descriptions for image buttons -->
    <string name="rewind_label">Rewind</string>
    <string name="fast_forward_label">Fast forward</string>
...
