<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/playerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

        <FrameLayout
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_alignParentTop="true"
            android:layout_above="@id/playerFragment"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/nav_list"
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:background="?attr/nav_drawer_background"
        android:scrollbarStyle="outsideOverlay"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

</android.support.v4.widget.DrawerLayout>