<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_item"
        android:title="@string/refresh_label"
        android:menuCategory="container"
        app:showAsAction="ifRoom"
        android:icon="?attr/navigation_refresh"/>
</menu>